maze.lessons.maze.island.IslandMaze.scala.error
Escaper:38: error: not found: value While
  While(!estSurBiscuit()){
  ^